cc/tests/fixtures/positive/17-pp-include-angle.c
#include <stdio.h>
int z = 2;
