cc/tests/fixtures/negative/06-pp-malformed-include-angle.c
#include <stdio.h
int bad1 = 0;
